Mon Sep 20 04:13:00 2004  Minero Aoki  <aamine@loveruby.net>

	* test/ripper/test_scanner_events.rb: test spaces before heredoc
	  mark.

Mon Sep 20 03:46:54 2004  Minero Aoki  <aamine@loveruby.net>

	* parse.y [ripper]: spaces before heredoc marker was lost.

	* keywords: rb_reserved_word() should be defined only in ruby
	  core.

	* lex.c: sync with keywords.

	* ext/ripper/ripper.rb.in (parse): fix typo.

	* ext/ripper/lib/ripper.rb: sync with ripper.rb.in.

Mon Sep 20 03:37:59 2004  Tanaka Akira  <akr@m17n.org>

	* ext/zlib/zlib.c (gzfile_read_raw): call readpartial at first.
	  (Zlib::GzipReader#readpartial): new method.

Fri Sep 17 20:29:33 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* parse.y: add prototypes for Microsoft compiler.

	* ext/ripper/depend (parse.obj): lex.c exists at hdrdir.

	* {bcc32,win32,wince}/Makefile.sub (YACC, YFLAGS, parse.c):
	  use bison.

Fri Sep 17 17:11:08 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_delete): element comparison might change array
	  size. [ruby-dev:24273]

	* parse.y: make ruby parser reentrant. merge ripper parser to the
	  real one.  this change makes ruby require bison.

	* file.c (rb_file_truncate): clear stdio buffer before truncating
	  the file.  [ruby-dev:24191]

	* ext/digest/digest.c: use rb_obj_class() instead of CLASS_OF
	  which might return singleton class.  [ruby-dev:24202]

Fri Sep 17 16:07:09 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/multi-tk.rb: improve exit operation

Fri Sep 17 15:01:57 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tcltklib/tcltklib.c: fix SEGV when (thread_)vwait or
	  (thread_)tkwait

	* ext/tk/lib/tk.rb: add alias wait_window to wait_destroy

	* ext/tk/lib/multi-tk.rb: support calling 'mainloop' on slave
	  interpreters (however, the 'real' eventloop must be run on the
	  Default Master IP) 

	* ext/tk/lib/remote-tk.rb: follow the changes of ext/tk/lib/multi-tk.rb

	* ext/tk/sample/remote-ip_sample2.rb: ditto
